--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <link href="result/css/bootstrap.css" rel="stylesheet"/>
     <link href="result/css/technoimpex.css" rel="stylesheet"/>
-
     <!--     Fonts and icons     -->
     <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -47,10 +46,7 @@
                     <a href="#item-4">ДЛЯ КЛИЕНТОВ</a>
                 </li>
                 <li>
-                    <a href="#item-5">ТЕХНИЧЕСКИЕ УСЛОВИЯ</a>
-                </li>
-                <li>
-                    <a href="#item-6">КОНТАКТЫ</a>
+                    <a href="#item-5">КОНТАКТЫ</a>
                 </li>
             </ul>
         </div>
@@ -213,9 +209,32 @@
             <h5 class="subtitle text-gray"></h5>
             <h2>Для клиентов</h2>
             <div class="separator separator-danger">*</div>
+            <p class="description">Документация и сертификаты для наших клиентов.</p>
         </div>
 
         <div class="team">
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="result/mtu.pdf" target="_blank">
+                        <div class="info-icon">
+                            <div class="icon text-danger">
+                                <i class="pe-7s-note2"></i>
+                            </div>
+                            <h3>Устав "Техноимпэкс"</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <a href="result/mtu.pdf" target="_blank">
+                        <div class="info-icon">
+                            <div class="icon text-danger">
+                                <i class="pe-7s-note2"></i>
+                            </div>
+                            <h3>Технические условия</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
             <div class="row">
                 <div id="carousel-docs" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -226,23 +245,6 @@
                         <li data-target="#carousel-docs" data-slide-to="3"></li>
                         <li data-target="#carousel-docs" data-slide-to="4"></li>
                         <li data-target="#carousel-docs" data-slide-to="5"></li>
-                        <li data-target="#carousel-docs" data-slide-to="6"></li>
-                        <li data-target="#carousel-docs" data-slide-to="7"></li>
-                        <li data-target="#carousel-docs" data-slide-to="8"></li>
-                        <li data-target="#carousel-docs" data-slide-to="9"></li>
-                        <li data-target="#carousel-docs" data-slide-to="10"></li>
-                        <li data-target="#carousel-docs" data-slide-to="11"></li>
-                        <li data-target="#carousel-docs" data-slide-to="12"></li>
-                        <li data-target="#carousel-docs" data-slide-to="13"></li>
-                        <li data-target="#carousel-docs" data-slide-to="14"></li>
-                        <li data-target="#carousel-docs" data-slide-to="15"></li>
-                        <li data-target="#carousel-docs" data-slide-to="16"></li>
-                        <li data-target="#carousel-docs" data-slide-to="17"></li>
-                        <li data-target="#carousel-docs" data-slide-to="18"></li>
-                        <li data-target="#carousel-docs" data-slide-to="19"></li>
-                        <li data-target="#carousel-docs" data-slide-to="20"></li>
-                        <li data-target="#carousel-docs" data-slide-to="21"></li>
-                        <li data-target="#carousel-docs" data-slide-to="22"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
@@ -266,7 +268,8 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="result/img/carousel/Протокол%20продление%20полномочий%20директора%20до%202019г..jpeg" alt="...">
+                            <img src="result/img/carousel/Протокол%20продление%20полномочий%20директора%20до%202019г..jpeg"
+                                 alt="...">
                             <div class="carousel-caption">
                                 Протокол продления полномочий
                             </div>
@@ -283,108 +286,6 @@
                                 Сертификат МРС
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав1.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%202.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%203.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%204.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%205.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%206.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%207.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%208.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%209.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%2010.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%2011.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%2012.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%2013.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%2014.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%2015.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав%2016.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="result/img/carousel/устав17.jpeg" alt="...">
-                            <div class="carousel-caption">
-                                Устав
-                            </div>
-                        </div>
                     </div>
 
                     <!-- Controls -->
@@ -399,29 +300,10 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
-
-<div class="section section-our-clients-freebie" id="item-5">
-    <div class="container">
-        <div class="title-area">
-            <h5 class="subtitle text-gray"></h5>
-            <h2>Технические условия</h2>
-            <div class="separator separator-danger">∎</div>
-        </div>
-        <div class="content">
-            <div class="row">
-                <div class='embed-responsive' style='padding-bottom:100%'>
-                    <object data='result/mtu.pdf' type='application/pdf' width='100%' height='100%'></object>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="section section-small section-get-started" id="item-6">
+<div class="section section-small section-get-started" id="item-5">
     <div class="parallax filter">
         <div class="image"
              style="background-image: url('result/img/office-1.jpeg')">
@@ -430,7 +312,8 @@
             <div class="title-area">
                 <h2 class="text-white">Хотите работать с нами?</h2>
                 <div class="separator line-separator">♦</div>
-                <p class="description">Мы предлагаем индивидуальный подход к каждому клиенту по условиям сотрудничества!
+                <p class="description">Мы предлагаем индивидуальный подход к каждому клиенту по условиям
+                    сотрудничества!
                     <br>Гибкая ценовая политика и оперативность выполнения заказа являются нашим преимуществом.
                     <br>Наше предприятие реализует мешки оптом.
                 </p>
@@ -452,11 +335,14 @@
                     <h3 class="title">Контакты</h3>
                     <nav>
                         <ul class="my_address">
-                            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>technoimpex@inbox.ru</a>
+                            <li><a href="#"><i class="fa fa-envelope"
+                                               aria-hidden="true"></i>technoimpex@inbox.ru</a>
                             </li>
                             <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>info@tx59.ru</a></li>
-                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>+ 7 (342) 218-17-76</a></li>
-                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>+ 7 (342) 218-18-66</a></li>
+                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>+ 7 (342) 218-17-76</a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>+ 7 (342) 218-18-66</a>
+                            </li>
                             <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span>614068      г. Пермь, ул. Данщина 4А офис 4</span></a>
                             </li>
                         </ul>
