optimize image for web

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="content">
                 <div class="row">
                     <h2>О компании</h2>
-                    <div class="separator separator-danger">✻</div>
+                    <div class="separator separator-danger">♦</div>
                     <p><h5>Компания ООО «Техноимпэкс» на протяжении 19 лет занимается производством
                     полипропиленовых мешков и вкладышей, предназначенных для хранения и безопасной перевозки
                     сыпучих продуктов, таких как сахар, мука, зерно, удобрения, химикаты, ткани, строительные
@@ -153,53 +153,39 @@
                     Для производства полипропиленовых мешков и вкладышей, используется высококачественное сырье,
                     такое как первичный полипропилен и полиэтилен соответствующих марок, современное
                     оборудование и высокоэффективные технологии.</h5></p>
-
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="section section-our-clients-freebie" id="item-3">
-    <div class="container">
-        <div class="title-area">
-            <h5 class="subtitle text-gray"></h5>
-            <h2>Продукция</h2>
-            <div class="separator separator-danger">∎</div>
-        </div>
-
-        <div class="team">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="card card-member">
-                                <div class="content">
-                                    <img alt="..." class="img-thumbnail" src="result/img/products/IMG_1.jpg"/>
+                <div class="row" id="item-3">
+                    <h2>Продукция</h2>
+                    <div class="separator separator-danger">✻</div>
+                    <div class="col-md-10 col-md-offset-1">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card card-member">
+                                    <div class="content">
+                                        <img alt="..." class="img-thumbnail" src="result/img/products/IMG_1.jpg"/>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card card-member">
-                                <div class="content">
-                                    <img alt="..." class="img-thumbnail" src="result/img/products/IMG_2.jpg"/>
+                            <div class="col-md-4">
+                                <div class="card card-member">
+                                    <div class="content">
+                                        <img alt="..." class="img-thumbnail" src="result/img/products/IMG_2.jpg"/>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card card-member">
-                                <div class="content">
-                                    <img alt="..." class="img-thumbnail" src="result/img/products/IMG_3.jpg"/>
+                            <div class="col-md-4">
+                                <div class="card card-member">
+                                    <div class="content">
+                                        <img alt="..." class="img-thumbnail" src="result/img/products/IMG_3.jpg"/>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
@@ -208,7 +194,7 @@
         <div class="title-area">
             <h5 class="subtitle text-gray"></h5>
             <h2>Для клиентов</h2>
-            <div class="separator separator-danger">*</div>
+            <div class="separator separator-danger">♦</div>
             <p class="description">Документация и сертификаты для наших клиентов.</p>
         </div>
 
@@ -236,6 +222,12 @@
                 </div>
             </div>
             <div class="row">
+                <div class="info-icon">
+                    <div class="icon text-danger">
+                        <i class="pe-7s-note2"></i>
+                    </div>
+                    <h3 class="description">Остальная документация</h3>
+                </div>
                 <div id="carousel-docs" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -311,7 +303,7 @@
         <div class="container">
             <div class="title-area">
                 <h2 class="text-white">Хотите работать с нами?</h2>
-                <div class="separator line-separator">♦</div>
+                <div class="separator line-separator">✻</div>
                 <p class="description">Мы предлагаем индивидуальный подход к каждому клиенту по условиям
                     сотрудничества!
                     <br>Гибкая ценовая политика и оперативность выполнения заказа являются нашим преимуществом.
