optimize image for web

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="team">
             <div class="row">
                 <div class="col-md-6">
-                    <a href="result/mtu.pdf" target="_blank">
+                    <a href="result/ustav.pdf" target="_blank">
                         <div class="info-icon">
                             <div class="icon text-danger">
                                 <i class="pe-7s-note2"></i>
