--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     <h3>Мешки полипропиленовые от<br> 25 до 50 кг размером</h3>
                     <p class="description">
                         - 500 х 1000 <br>
+                        - 560 х 1050 <br>
                         - 460 х 780
                     </p>
                 </div>
@@ -106,7 +107,7 @@
                     </div>
                     <h3>По заявке клиентов изготовим
                     </h3>
-                    <p class="description"> - мешки с размещением 4-х цветного логотипа, <br> маркировки,
+                    <p class="description"> - мешки с размещением логотипа до 4-х цветов, <br> маркировки,
                         рекламной информации и реквизитов предприятия<br>
                         - мешки из п/п рукавной ткани различной плотности от 50-80 г/кв.м
                     </p>
@@ -159,28 +160,36 @@
                     <div class="separator separator-danger">✻</div>
                     <div class="col-md-10 col-md-offset-1">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="card card-member">
-                                    <div class="content">
+                                    <div>
                                         <img alt="..." class="img-thumbnail" src="result/img/products/IMG_1.jpg"/>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="card card-member">
-                                    <div class="content">
+                                    <div>
                                         <img alt="..." class="img-thumbnail" src="result/img/products/IMG_2.jpg"/>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
                                 <div class="card card-member">
-                                    <div class="content">
+                                    <div>
                                         <img alt="..." class="img-thumbnail" src="result/img/products/IMG_3.jpg"/>
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="col-md-6">
+                                <div class="card card-member">
+                                    <div>
+                                        <img alt="..." class="img-thumbnail" src="result/img/products/IMG_4.jpg"/>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
